--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -1,14 +1,15 @@
 ###########################################################
 # Owner's Personal Information
 ###########################################################
+# Update DCN_2022-12-01-(002) : change and substitute
 # This is your brand name
-brand: "Your Brand"
+brand: " Path of Glory "
 
 # text below the brand name
 brand_sub_text: "$site_sample"
 
 # used for seo meta post author (if it's not defined in post)
-name: "Your Name"
+name: "The Winner of the Canal"
 
 # home page top header texts
 home:
@@ -23,7 +24,7 @@ about:
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
-copyright_start_year: "2022"
+copyright_start_year: "2022, 2023"
 
 # make sure creative_commons.enable is true in _data/conf/main.yml file
 creative_commons:
@@ -42,7 +43,7 @@ creative_commons:
 # seo meta this is needed for each language
 # If meta_description is not defined in front matter, it's created from (post / page) content,
 # if it has no content, this will be used for page description. It is also used in manifest.json
-meta_common_description: "Your meta description."
+meta_common_description: "For Data Lovers Only!"
 
 # contact options (side nav bottom and about page)
 # the order of the items will be shown as here.
