--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ###########################################################
 # Global Configuration (https://jekyllrb.com/docs/configuration/options/)
+# Update Personnal global config "DCERT for testing WebSite-Jekyll" 2023-01-06
 ###########################################################
 # if you want to force HTTPS, specify the domain without the http at the start
 # set domain: "your_github_user_name.github.io"
@@ -11,7 +12,7 @@ url: "https://dcert.github.io/TestWebSite-Jekyll"
 
 # path to this site
 # if your page is located at https://your_github_user_name.github.io/blog, then set baseurl: "/blog"
-baseurl: ""
+baseurl: "/TestWebSite-Jekyll"
 
 # please use TZ database name column on the list table
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
