--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -179,8 +179,8 @@ page_data:
       img_title: "phare-des-cardinaux_Hoedic / Cardinaux lighthouse in Hoedic island"
       date: "2023-01-01"
       post: |
-        # Title
-        This is Lighthouse Project. AN example: Cardinaux lighthouse in Hoedic island (Brittany).
+        # Ar mor a zo glaz. The sea is blue.
+        This is Lighthouse Project. An example: Cardinaux lighthouse in Hoedic island (Brittany).
         ![Image](:phare-des-cardinaux_Hoedic-(centre).jpg)
 
     # quote
