Update Content/Projects/en.yml 2023-01-07-(030)

--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -202,7 +202,36 @@ page_data:
         # Souhaits de nouvel an. New Year Wishes.
         Réflexions, pensées et décisions
         ![La Rade de Brest](:Plan_de_la_rade_de_Brest.jpg)  
-        Réflexions, pensées et décisions
+        C’est au Conquet , à l’ouest
+        De la Rade de Brest,
+        Sous la voute céleste,
+        Que j’ai fait l’autotest.
+        
+        Ah ! Peste ! Le sort funeste
+        M’accable sans conteste.
+        Je râle, je manifeste,
+        Je rage, je proteste.
+        
+        Mais l’autotest atteste
+        Que mon Karma empeste.
+        Ma vie est indigeste.
+        Je dois jeter du lest !
+        
+        Tout penaud et modeste,
+        Las, je dois faire un geste !
+        Alors, c’est décidé.
+        Je vais dé-consommer !
+        
+        Et me déconnecter.
+        Frugale sobriété,
+        Spartiate austérité,
+        Maintenant, j’ai tranché.
+        
+        Mon smartphone aux déchets,
+        Mon PC au musée.
+        Désormais, c’est sacré.
+        Je veux être parfait !
+
         ![Ouessant - Promenade à pieds](:Ouessant-promenade-le-long-de-la-mer.jpg)          
     # quote
     - type: id_quote
