Update Content/Projects/en.yml 2023-01-07-(031)

--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -202,6 +202,8 @@ page_data:
         # Souhaits de nouvel an. New Year Wishes.
         Réflexions, pensées et décisions
         ![La Rade de Brest](:Plan_de_la_rade_de_Brest.jpg)  
+
+        ```python
         C’est au Conquet , à l’ouest
         De la Rade de Brest,
         Sous la voute céleste,
@@ -231,6 +233,7 @@ page_data:
         Mon PC au musée.
         Désormais, c’est sacré.
         Je veux être parfait !
+        ```        
 
         ![Ouessant - Promenade à pieds](:Ouessant-promenade-le-long-de-la-mer.jpg)          
     # quote
