Update Content/Projects/en.yml 2023-01-07-(033)

--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -199,7 +199,7 @@ page_data:
       img_title: "Le long de la mer à Ouessant / Along seaside in Ouessant island"
       date: "2023-01-01"
       post: |
-        # Souhaits et résolutions de nouvel an. New Year Wishes and Resolutions.
+        # Résolutions de nouvel an. New Year Resolutions.
         Réflexions, pensées puis décisions
         ![La Rade de Brest](:Plan_de_la_rade_de_Brest.jpg)  
 
