--- a/_data/const/contact.yml
+++ b/_data/const/contact.yml
@@ -13,7 +13,7 @@ github:
   url: "https://github.com"
 email:
   icon: "fa fa-envelope-o"
-  url: ""
+  url: "didier.certain@etu.u-cergy.fr"
 linkedin:
   icon: "fa fa-linkedin"
   url: "https://www.linkedin.com/today/author/didier-certain-46950a1"
