Update/_Data/Const/Contact.yml 2023-01-07-(101)

--- a/_data/const/contact.yml
+++ b/_data/const/contact.yml
@@ -25,7 +25,7 @@ instagram:
   url: "https://www.instagram.com"
 youtube:
   icon: "fa fa-youtube-play"
-  url: "https://www.youtube.com/channel"
+  url: "https://www.youtube.com/watch?v=4YbSCFyA6BM"
 facebook:
   icon: "fa fa-facebook"
   url: "https://www.facebook.com"
