--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -3,10 +3,10 @@
 ###########################################################
 # Update DCN_2023-01-06-(001) : change and substitute Personal infos
 # This is your brand name
-brand: " Didier Certain "
+brand: " Prof. Calculus "
 
 # text below the brand name
-brand_sub_text: "$site_sample"
+brand_sub_text: "The Data Expert, proud member of Breizh Data Club"
 
 # used for seo meta post author (if it's not defined in post)
 name: "Proud member of Breizh Data Club"
@@ -14,9 +14,9 @@ name: "Proud member of Breizh Data Club"
 # home page top header texts
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: "$site_welcome"
+  top_header_line1: "Come in! You are in the rigth place."
   # if commented, top header will be a single line
-  top_header_line2: "$site_brand"
+  top_header_line2: " Prof. Calculus "
 
 # about page sub title
 about:
