Update _Data/Owner/en.yml 2023-01-12-(005)

--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -20,7 +20,8 @@ home:
 
 # about page sub title
 about:
-  sub_title: "$site_sample"
+  sub_title: "I will give you some advices and more ...  (cliffhanger)"
+# former ===>   sub_title: "$site_sample"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
@@ -50,11 +51,11 @@ meta_common_description: " For Data Lovers Only! "
 # comment to remove any contact item
 contacts:
   #- github: ""
-  #- email: "didier.certain@etu.u-cergy.fr"
+  - email: "didier.certain@etu.u-cergy.fr"
   #- linkedin: "https://www.linkedin.com/today/author/didier-certain-46950a1"
   #- twitter: ""
   #- instagram: ""
-  #- youtube: "https://www.youtube.com/watch?v=4YbSCFyA6BM"
+  - youtube: "https://www.youtube.com/watch?v=4YbSCFyA6BM"
   #- facebook: ""
 # to add more, check the _data/const/contact.yml file
 #  - your_new_contact: ""
