--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 ###########################################################
 # Global Configuration (https://jekyllrb.com/docs/configuration/options/)
-# Update Personnal global config "DCERT for testing WebSite-Jekyll" 2023-01-06
+# Update Personnal global config "DataComputingNode for testing WebSite-Jekyll" 2023-01-25
 ###########################################################
 # if you want to force HTTPS, specify the domain without the http at the start
 # set domain: "your_github_user_name.github.io"
-domain: ""
+domain: "DataComputingNode.github.io"
 
 # your web site url
 # for GitHub Pages, url: "https://your_github_user_name.github.io"
-url: "https://DataComputingNode.github.io/"
+url: "https://DataComputingNode.github.io"
 
 # path to this site
 # if your page is located at https://your_github_user_name.github.io/blog, then set baseurl: "/blog"
