--- a/_data/const/contact.yml
+++ b/_data/const/contact.yml
@@ -13,10 +13,10 @@ github:
   url: "https://github.com"
 email:
   icon: "fa fa-envelope-o"
-  url: "didier.certain@etu.u-cergy.fr"
+  url: "dcn.prof@gmail.com"
 linkedin:
   icon: "fa fa-linkedin"
-  url: "https://www.linkedin.com/today/author/didier-certain-46950a1"
+  url: "https://www.linkedin.com"
 twitter:
   icon: "fa fa-twitter"
   url: "https://twitter.com"
