--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ domain: "DataComputingNode.github.io"
 
 # your web site url
 # for GitHub Pages, url: "https://your_github_user_name.github.io"
-url: "https://DataComputingNode.github.io"
+url: "https://datacomputingnode.github.io/"
 
 # path to this site
 # if your page is located at https://your_github_user_name.github.io/blog, then set baseurl: "/blog"
