Minor Update en.yml (2024-04-13)-001
Minor Update

--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -4,6 +4,7 @@
 # Update DCN_2023-01-06-(001) : change and substitute Personal infos
 # Update DCN_2023-01-12-(001) : change and substitute Personal infos 
 # Update DCN_2023-01-25-(001) : change and substitute Personal infos
+# Update DCN_2024-04-13-(001) : update Personal infos
 #
 # This is your brand name
 brand: " Prof. Calculus "
@@ -16,9 +17,9 @@ name: "Data Expert"
 # home page top header texts (Bloc A.1)
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: "Hello! You are in the right place."
+  top_header_line1: "   Hello! You are in the right place."
   # if commented, top header will be a single line
-  top_header_line2: " I am Prof. Calculus "
+  top_header_line2: "    I am Prof. Calculus "
 
 # about page sub title
 about:
