--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -12,14 +12,14 @@ brand: " Prof. Calculus "
 # text below the brand name
 brand_sub_text: "The Data Expert"
 # used for seo meta post author (if it's not defined in post)
-name: "Data Expert"
+name: "the Data Expert"
 
 # home page top header texts (Bloc A.1)
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: "   Hello! You are in the right place."
+  top_header_line1: $site_brand + "   Hello! You are in the right place."
   # if commented, top header will be a single line
-  top_header_line2: "    I am Prof. Calculus "
+  top_header_line2: "    I am Prof. Calculus " + $site_name
 
 # about page sub title
 about:
