Minor Update en.yml  (2024-04-13)-006
Minor Update

--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -17,9 +17,9 @@ name: "the Data Expert"
 # home page top header texts (Bloc A.1)
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1: $brand + "   Hello! You are in the right place."
+  top_header_line1:". . .   Hello! You are in the right place."
   # if commented, top header will be a single line
-  top_header_line2: "    I am Prof. Calculus " + $name
+  top_header_line2: ". . .  I am Prof. Calculus "
 
 # about page sub title
 about:
