--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -10,16 +10,16 @@
 brand: " Prof. Calculus "
 
 # text below the brand name
-brand_sub_text: "The Data Expert"
+brand_sub_text: " The Data Expert "
 # used for seo meta post author (if it's not defined in post)
-name: "the Data Expert"
+name: " The Data Expert "
 
 # home page top header texts (Bloc A.1)
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
-  top_header_line1:"    Hello! You are in the right place."
+  top_header_line1:" Hello! You are in the right place. "
   # if commented, top header will be a single line
-  top_header_line2: "    I am Prof. Calculus "
+  top_header_line2: " I am Prof. Calculus "
 
 # about page sub title
 about:
@@ -28,7 +28,7 @@ about:
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
-copyright_start_year: "2022, 2023"
+copyright_start_year: "2022, 2023, 2024"
 
 # make sure creative_commons.enable is true in _data/conf/main.yml file
 creative_commons:
